Add susy grid as dependency

--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "mathsass": "^0.9.5",
     "madsauce": "jrah/madsauce"
+  },
+  "dependencies": {
+    "susy": "^2.2.12"
   }
 }
