--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "madsauce": "jrah/madsauce"
   },
   "dependencies": {
-    "susy": "^2.2.12"
+    "susy": "^2.2.12",
+    "material-design-icons": "^3.0.1"
   }
 }
