--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-minify": "0.0.14",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemap": "^1.0.1"
+    "gulp-sourcemap": "^1.0.1",
+    "gulp-sourcemaps": "^2.4.0"
   }
 }
