--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,6 @@
     "madsauce": "jrah/madsauce"
   },
   "dependencies": {
-    "susy": "^2.2.12",
-    "material-design-icons": "^3.0.1"
+    "susy": "^2.2.12"
   }
 }
